--- a/flutter_application_1/lib/l10n/app_en.arb
+++ b/flutter_application_1/lib/l10n/app_en.arb
@@ -1,4 +1,9 @@
 {
+  "userName": "Jasser Boubaker",
+  "userEmail": "jasser.boubaker@email.com",
+  "french": "Français",
+  "english": "English",
+  "arabic": "العربية",
   "purchaseRequests": "Purchase Requests",
   "addPR": "Add Request",
   "search": "Search...",
