--- a/flutter_application_1/lib/l10n/app_fr.arb
+++ b/flutter_application_1/lib/l10n/app_fr.arb
@@ -37,6 +37,28 @@
   "periodDay": "Jour",
   "periodWeek": "Semaine",
   "periodMonth": "Mois",
-  "periodYear": "Année"
-  "filterbystatus": "filtrer par statut"
+  "periodYear": "Année",
+  "filterbystatus": "filtrer par statut",
+  "userName": "Jasser Boubaker",
+  "userEmail": "jasser.boubaker@email.com",
+  "french": "Français",
+  "english": "Anglais",
+  "arabic": "Arabe",
+  "purchaseOrders": "Bons de commande",
+  "addPO": "Ajouter BC",
+  "purchaseOrdersTable": "Table des bons de commande",
+  "filterByPriority": "Filtrer par priorité",
+  "filterByStatus": "Filtrer par statut",
+  "filterBySubmissionDate": "Filtrer par date de soumission",
+  "filterByDueDate": "Filtrer par date d'échéance",
+  "submission": "Soumission",
+  "due": "Échéance",
+  "clearFilters": "Effacer les filtres",
+  "deletePurchaseOrder": "Supprimer le bon de commande",
+  "deletePurchaseOrderConfirm": "Êtes-vous sûr de vouloir supprimer {id} ?",
+  "delete": "Supprimer",
+  "purchaseOrderDeleted": "Bon de commande {id} supprimé",
+  "failedToDeletePurchaseOrder": "Échec de la suppression du bon de commande : {error}",
+  "viewPurchaseOrder": "Voir le bon de commande",
+  "back": "Retour"
 }
