--- a/flutter_application_1/lib/l10n/app_ar.arb
+++ b/flutter_application_1/lib/l10n/app_ar.arb
@@ -30,7 +30,9 @@
   "about": "حول",
   "cancel": "إلغاء",
   "confirm": "تأكيد",
-  "doYouReallyWantToLogout": "هل تريد حقًا تسجيل الخروج؟",
+  "approve": "وافق",
+  "reject": "رفض",
+  "doYouReallyWantToLogout": "هل تريد حقا تسجيل الخروج؟",
   "profileUpdated": "تم تحديث الملف الشخصي!",
   "themeChanged": "تم تغيير السمة إلى {themeName}",
   "languageChanged": "تم تغيير اللغة إلى {language}",
@@ -59,5 +61,213 @@
   "purchaseOrderDeleted": "تم حذف طلب الشراء {id}",
   "failedToDeletePurchaseOrder": "فشل حذف طلب الشراء: {error}",
   "viewPurchaseOrder": "عرض طلب الشراء",
-  "back": "رجوع"
+  "back": "رجوع",
+  "users": "المستخدمون",
+  "password": "كلمة المرور",
+  "purchaseRequest": "طلب الشراء",
+  "purchaseOrder": "أمر الشراء",
+  "rolesAccess": "الأدوار والدخول",
+  "settings": "الإعدادات",
+  "supplier": "المورد",
+  "product": "المنتج",
+  "profile": "الملف الشخصي",
+  "page": "الصفحة",
+  "usersList": "قائمة المستخدمين",
+  "addNewUser": "إضافة مستخدم جديد",
+  "userAdded": "تم إضافة المستخدم بنجاح.",
+  "searchUser": "البحث باسم المستخدم، البريد الإلكتروني ...",
+  "email": "البريد الإلكتروني",
+  "name": "الاسم",
+  "status": "الحالة",
+  "userPermission": "صلاحيات المستخدم",
+  "actions": "الإجراءات",
+  "active": "نشط",
+  "inactive": "غير نشط",
+  "unknown": "غير معروف",
+  "none": "لا شيء",
+  "edit": "تعديل",
+  "view": "عرض",
+  "loadProfileError": "تعذر تحميل ملف المستخدم الشخصي.",
+  "userUpdated": "تم تحديث المستخدم بنجاح.",
+  "all": "الكل",
+  "filterStatus": "تصفية حسب الحالة",
+  "filterPermission": "تصفية حسب صلاحيات المستخدم",
+  "operational": "تشغيلي",
+  "full": "كامل",
+  "basic": "أساسي",
+  "deleteUser": "حذف المستخدم",
+  "confirmDeleteUser": "هل أنت متأكد من رغبتك في حذف هذا المستخدم؟",
+  "success": "النجاح",
+  "failed": "فشل",
+  "getStarted": "ابدأ الآن",
+  "dontHaveAnAccount": "ليس لديك حساب؟",
+  "signUp": "إنشاء حساب",
+  "emailAddress": "عنوان البريد الإلكتروني",
+  "enterYourPassword": "أدخل كلمة المرور الخاصة بك",
+  "forgetPassword": "هل نسيت كلمة المرور؟",
+  "loginBtn": "تسجيل الدخول",
+  "forgotPassword": "نسيت كلمة المرور",
+  "resetYourPassword": "إعادة تعيين كلمة المرور الخاصة بك",
+  "sendResetLink": "إرسال رابط إعادة التعيين",
+  "sending": "جاري الإرسال...",
+  "backToSignIn": "العودة إلى تسجيل الدخول",
+  "dashboard": "لوحة التحكم",
+  "brand": "العلامة التجارية",
+  "roles": "الأدوار",
+  "userProfile": "ملف المستخدم الشخصي",
+  "supplierDetails": "تفاصيل المورد",
+  "productFamilies": "عائلات المنتجات",
+  "subfamilies": "الفئات الفرعية",
+  "addNewBrand": "إضافة علامة تجارية جديدة",
+  "createNewRole": "إنشاء دور جديد",
+  "addBtn": "إضافة",
+  "saveBtn": "حفظ",
+  "submitBtn": "إرسال",
+  "copyLink": "نسخ الرابط",
+  "nextBtn": "التالي",
+  "prevBtn": "السابق",
+  "firstName": "الاسم الأول",
+  "lastName": "اسم العائلة",
+  "state": "الولاية",
+  "zipCode": "الرمز البريدي",
+  "selectRole": "اختر الدور",
+  "selectStatus": "اختر الحالة",
+  "roleField": "الدور",
+  "descriptionField": "الوصف",
+  "reenterPassword": "أعد إدخال كلمة المرور الخاصة بك",
+  "currentPassword": "كلمة المرور الحالية",
+  "newPasswordField": "كلمة المرور الجديدة",
+  "confirmPasswordField": "تأكيد كلمة المرور",
+  "enterValidEmail": "يرجى إدخال بريد إلكتروني صحيح.",
+  "passwordRequired": "كلمة المرور مطلوبة.",
+  "passwordMinLength": "يجب أن تكون كلمة المرور 8 أحرف على الأقل.",
+  "includeUppercase": "أدرج حرفًا واحدًا على الأقل بأحرف كبيرة.",
+  "includeLowercase": "أدرج حرفًا واحدًا على الأقل بأحرف صغيرة.",
+  "includeNumber": "أدرج رقمًا واحدًا على الأقل.",
+  "includeSpecialChar": "أدرج حرفًا خاصًا واحدًا على الأقل.",
+  "passwordRequirements": "يجب أن تكون كلمة المرور 8 أحرف على الأقل، وتشمل حرفًا كبيرًا وصغيرًا ورقمًا.",
+  "fieldsRequired": "هذا الحقل مطلوب",
+  "emailRequired": "البريد الإلكتروني مطلوب",
+  "usernameRequired": "اسم المستخدم مطلوب",
+  "allFieldsRequired": "يرجى ملء جميع الحقول",
+  "branchName": "اسم الفرع",
+  "categoryField": "الفئة",
+  "phoneField": "الهاتف",
+  "matriculeFiscale": "الرقم المالي",
+  "pending": "قيد الانتظار",
+  "approved": "موافق عليه",
+  "rejected": "مرفوض",
+  "searchProduct": "البحث باسم المنتج...",
+  "filterByPriority": "تصفية حسب الأولوية",
+  "filterBySubmissionDate": "تصفية حسب تاريخ التقديم",
+  "filterByDueDate": "تصفية حسب تاريخ الاستحقاق",
+  "showArchived": "عرض مؤرشفة",
+  "hideArchived": "إخفاء مؤرشفة",
+  "clearFilters": "مسح الفلاتر",
+  "dashboardRefreshed": "تم تحديث لوحة التحكم!",
+  "supplierCreatedSuccessfully": "تم إنشاء المورد بنجاح!",
+  "supplierUpdated": "تم تحديث المورد",
+  "supplierDeletedSuccessfully": "تم حذف المورد بنجاح",
+  "familyUpdatedSuccessfully": "تم تحديث العائلة بنجاح!",
+  "familyCreatedSuccessfully": "تم إنشاء العائلة بنجاح!",
+  "familyDeletedSuccessfully": "تم حذف العائلة بنجاح",
+  "subfamilyCreatedSuccessfully": "تم إنشاء الفئة الفرعية بنجاح!",
+  "subfamilyDeletedSuccessfully": "تم حذف الفئة الفرعية بنجاح",
+  "permissionsSaved": "تم حفظ الأذونات",
+  "purchaseOrderCreatedSuccessfully": "تم إنشاء أمر الشراء بنجاح!",
+  "deleteSupplier": "حذف المورد",
+  "deleteFamily": "حذف العائلة",
+  "deleteSubfamily": "حذف الفئة الفرعية",
+  "addNewSupplier": "إضافة مورد جديد",
+  "addFamily": "إضافة عائلة",
+  "editFamily": "تعديل العائلة",
+  "addSubfamily": "إضافة فئة فرعية",
+  "editSubfamily": "تعديل الفئة الفرعية",
+  "home": "الرئيسية",
+  "createAccountToStart": "أنشئ حسابك للبدء",
+  "agreeToTerms": "أوافق على الشروط والخدمات",
+  "copyrightInfo": "© 2025 لوحة تحكم MyApp",
+  "mainPage": "الصفحة الرئيسية",
+  "logIn": "تسجيل الدخول",
+  "welcomeToMainPage": "مرحبا بك في الصفحة الرئيسية!",
+  "userInformationForm": "نموذج معلومات المستخدم",
+  "openFileToSelectImage": "فتح ملف لتحديد الصورة",
+  "save": "حفظ",
+  "passwordsDoNotMatch": "كلمات المرور غير متطابقة",
+  "userProfile": "ملف المستخدم الشخصي",
+  "firstName": "الاسم الأول",
+  "lastName": "اسم العائلة",
+  "country": "الدولة",
+  "state": "الولاية",
+  "city": "المدينة",
+  "address": "العنوان",
+  "location": "الموقع",
+  "zipCode": "الرمز البريدي",
+  "updateProfile": "تحديث الملف الشخصي",
+  "addNewRole": "إضافة دور جديد",
+  "editRole": "تعديل الدور",
+  "roleName": "اسم الدور",
+  "roleDescription": "وصف الدور",
+  "roleCreatedSuccessfully": "تم إنشاء الدور بنجاح!",
+  "failedToCreateRole": "فشل إنشاء الدور!",
+  "deleteRole": "حذف الدور",
+  "confirmDeleteRole": "هل أنت متأكد من رغبتك في حذف هذا الدور؟",
+  "addNewSupplier": "إضافة مورد جديد",
+  "editSupplier": "تعديل المورد",
+  "supplierName": "اسم المورد",
+  "supplierEmail": "بريد المورد الإلكتروني",
+  "phone": "الهاتف",
+  "matricule": "رقم المصفوفة",
+  "cin": "بطاقة الهوية الوطنية",
+  "supplierCreatedSuccessfully": "تم إنشاء المورد بنجاح!",
+  "supplierUpdatedSuccessfully": "تم تحديث المورد بنجاح!",
+  "supplierDeletedSuccessfully": "تم حذف المورد بنجاح",
+  "deleteSupplier": "حذف المورد",
+  "confirmDeleteSupplier": "هل أنت متأكد من رغبتك في حذف هذا المورد؟",
+  "addNewProduct": "إضافة منتج جديد",
+  "editProduct": "تعديل المنتج",
+  "productName": "اسم المنتج",
+  "price": "السعر",
+  "quantity": "الكمية",
+  "description": "الوصف",
+  "productCreatedSuccessfully": "تم إنشاء المنتج بنجاح!",
+  "productUpdatedSuccessfully": "تم تحديث المنتج بنجاح!",
+  "productDeletedSuccessfully": "تم حذف المنتج بنجاح",
+  "deleteProduct": "حذف المنتج",
+  "confirmDeleteProduct": "هل أنت متأكد من رغبتك في حذف هذا المنتج؟",
+  "addTicket": "إضافة تذكرة",
+  "editTicket": "تعديل التذكرة",
+  "ticketTitle": "عنوان التذكرة",
+  "ticketDescription": "وصف التذكرة",
+  "ticketStatus": "حالة التذكرة",
+  "ticketPriority": "أولوية التذكرة",
+  "ticketCreatedSuccessfully": "تم إنشاء التذكرة بنجاح!",
+  "ticketUpdatedSuccessfully": "تم تحديث التذكرة بنجاح!",
+  "ticketDeletedSuccessfully": "تم حذف التذكرة بنجاح",
+  "deleteTicket": "حذف التذكرة",
+  "confirmDeleteTicket": "هل أنت متأكد من رغبتك في حذف هذه التذكرة؟",
+  "high": "عالية",
+  "medium": "متوسطة",
+  "low": "منخفضة",
+  "pending": "قيد الانتظار",
+  "approved": "موافق عليه",
+  "rejected": "مرفوض",
+  "createdAt": "تم الإنشاء في",
+  "updatedAt": "تم التحديث في",
+  "searchByName": "البحث باسم...",
+  "noDataAvailable": "لا توجد بيانات متاحة",
+  "loading": "جاري التحميل...",
+  "error": "خطأ",
+  "pleaseSelectFile": "يرجى تحديد ملف",
+  "invalidEmail": "تنسيق البريد الإلكتروني غير صحيح",
+  "fieldRequired": "هذا الحقل مطلوب",
+  "confirmLogout": "هل تريد حقًا تسجيل الخروج؟",
+  "yes": "نعم",
+  "no": "لا",
+  "username": "اسم المستخدم",
+  "updatePassword": "تحديث كلمة المرور الخاصة بك",
+  "forYourSecurity": "لسلامتك، يرجى استخدام كلمة مرور قوية لا تستخدمها في مكان آخر.",
+  "newPassword": "كلمة المرور الجديدة",
+  "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
+  "updatePasswordBtn": "تحديث كلمة المرور"
 }
