--- a/flutter_application_1/lib/l10n/app_en.arb
+++ b/flutter_application_1/lib/l10n/app_en.arb
@@ -30,6 +30,8 @@
   "about": "About",
   "cancel": "Cancel",
   "confirm": "Confirm",
+  "approve": "Approve",
+  "reject": "Reject",
   "doYouReallyWantToLogout": "Do you really want to logout?",
   "profileUpdated": "Profile updated!",
   "themeChanged": "Theme changed to {themeName}",
@@ -42,5 +44,216 @@
   "periodDay": "Day",
   "periodWeek": "Week",
   "periodMonth": "Month",
-  "periodYear": "Year"
+  "periodYear": "Year",
+  "users": "Users",
+  "password": "Password",
+  "purchaseRequest": "Purchase Request",
+  "purchaseOrder": "Purchase Order",
+  "rolesAccess": "Roles and access",
+  "settings": "Settings",
+  "supplier": "Supplier",
+  "product": "Product",
+  "profile": "Profile",
+  "page": "Page",
+  "usersList": "User's List",
+  "addNewUser": "Add New User",
+  "userAdded": "User added successfully.",
+  "searchUser": "Search user name, email ...",
+  "email": "Email",
+  "name": "Name",
+  "status": "Status",
+  "userPermission": "User Permission",
+  "actions": "Actions",
+  "active": "Active",
+  "inactive": "Inactive",
+  "unknown": "Unknown",
+  "none": "None",
+  "edit": "Edit",
+  "view": "View",
+  "delete": "Delete",
+  "loadProfileError": "Unable to load user profile.",
+  "userUpdated": "User updated successfully.",
+  "all": "All",
+  "filterStatus": "Filter by Status",
+  "filterPermission": "Filter by User Permission",
+  "operational": "Operational",
+  "full": "Full",
+  "basic": "Basic",
+  "deleteUser": "Delete User",
+  "confirmDeleteUser": "Are you sure you want to delete this user?",
+  "success": "Success",
+  "failed": "Failed",
+  "getStarted": "Get Started",
+  "dontHaveAnAccount": "Don't have an account?",
+  "signUp": "Sign Up",
+  "emailAddress": "Email address",
+  "enterYourPassword": "Enter your password",
+  "forgetPassword": "Forget password?",
+  "loginBtn": "Login",
+  "forgotPassword": "Forgot Password",
+  "resetYourPassword": "Reset your password",
+  "sendResetLink": "Send Reset Link",
+  "sending": "Sending...",
+  "backToSignIn": "Back to Sign In",
+  "dashboard": "Dashboard",
+  "brand": "Brand",
+  "roles": "Roles",
+  "userProfile": "User Profile",
+  "supplierDetails": "Supplier Details",
+  "productFamilies": "Product Families",
+  "subfamilies": "Subfamilies",
+  "addNewBrand": "Add New Brand",
+  "createNewRole": "Create new role",
+  "addBtn": "Add",
+  "saveBtn": "Save",
+  "submitBtn": "Submit",
+  "copyLink": "Copy link",
+  "nextBtn": "Next",
+  "prevBtn": "Previous",
+  "firstName": "First name",
+  "lastName": "Last name",
+  "state": "State",
+  "zipCode": "Zip code",
+  "selectRole": "Select Role",
+  "selectStatus": "Select Status",
+  "roleField": "Role",
+  "descriptionField": "Description",
+  "reenterPassword": "Re-enter your password",
+  "currentPassword": "Current password",
+  "newPasswordField": "New password",
+  "confirmPasswordField": "Confirm Password",
+  "enterValidEmail": "Please enter a valid email.",
+  "passwordRequired": "Password is required.",
+  "passwordMinLength": "Password must be at least 8 characters long.",
+  "includeUppercase": "Include at least one uppercase letter.",
+  "includeLowercase": "Include at least one lowercase letter.",
+  "includeNumber": "Include at least one number.",
+  "includeSpecialChar": "Include at least one special character.",
+  "passwordRequirements": "Password must be at least 8 characters, include upper, lower, and a number.",
+  "fieldsRequired": "This field is required",
+  "emailRequired": "Email is required",
+  "usernameRequired": "Username is required",
+  "allFieldsRequired": "Please fill all fields",
+  "branchName": "Branch Name",
+  "categoryField": "Category",
+  "phoneField": "Phone",
+  "matriculeFiscale": "Matricule fiscale",
+  "pending": "Pending",
+  "approved": "Approved",
+  "rejected": "Rejected",
+  "searchProduct": "Search Product name...",
+  "filterByPriority": "Filter by Priority",
+  "filterBySubmissionDate": "Filter by Submission Date",
+  "filterByDueDate": "Filter by Due Date",
+  "showArchived": "Show Archived",
+  "hideArchived": "Hide Archived",
+  "clearFilters": "Clear Filters",
+  "dashboardRefreshed": "Dashboard refreshed!",
+  "supplierCreatedSuccessfully": "Supplier created successfully!",
+  "supplierUpdated": "Supplier updated",
+  "supplierDeletedSuccessfully": "Supplier deleted successfully",
+  "familyUpdatedSuccessfully": "Family updated successfully!",
+  "familyCreatedSuccessfully": "Family created successfully!",
+  "familyDeletedSuccessfully": "Family deleted successfully",
+  "subfamilyCreatedSuccessfully": "Subfamily created successfully!",
+  "subfamilyDeletedSuccessfully": "Subfamily deleted successfully",
+  "permissionsSaved": "Permissions saved",
+  "purchaseOrderCreatedSuccessfully": "Purchase Order created successfully!",
+  "deleteSupplier": "Delete Supplier",
+  "deleteFamily": "Delete Family",
+  "deleteSubfamily": "Delete Subfamily",
+  "addNewSupplier": "Add New Supplier",
+  "addFamily": "Add Family",
+  "editFamily": "Edit Family",
+  "addSubfamily": "Add Subfamily",
+  "editSubfamily": "Edit Subfamily",
+  "home": "Home",
+  "createAccountToStart": "Create YOUR ACCOUNT TO START",
+  "agreeToTerms": "I agree to the Terms and services",
+  "copyrightInfo": "© 2025 MyApp Dashboard",
+  "mainPage": "Main Page",
+  "logIn": "Log In",
+  "welcomeToMainPage": "Welcome to the Main Page!",
+  "userInformationForm": "User Information Form",
+  "openFileToSelectImage": "Open File to Select Image",
+  "save": "Save",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "userProfile": "User Profile",
+  "firstName": "First name",
+  "lastName": "Last name",
+  "country": "Country",
+  "state": "State",
+  "city": "City",
+  "address": "Address",
+  "location": "Location",
+  "zipCode": "Zip code",
+  "updateProfile": "Update profile",
+  "addNewRole": "Add New Role",
+  "editRole": "Edit Role",
+  "roleName": "Role Name",
+  "roleDescription": "Role Description",
+  "roleCreatedSuccessfully": "Role created successfully!",
+  "failedToCreateRole": "Failed to create role!",
+  "deleteRole": "Delete Role",
+  "confirmDeleteRole": "Are you sure you want to delete this role?",
+  "addNewSupplier": "Add New Supplier",
+  "editSupplier": "Edit Supplier",
+  "supplierName": "Supplier Name",
+  "supplierEmail": "Supplier Email",
+  "phone": "Phone",
+  "address": "Address",
+  "matricule": "Matricule",
+  "cin": "CIN",
+  "supplierCreatedSuccessfully": "Supplier created successfully!",
+  "supplierUpdatedSuccessfully": "Supplier updated successfully!",
+  "supplierDeletedSuccessfully": "Supplier deleted successfully",
+  "deleteSupplier": "Delete Supplier",
+  "confirmDeleteSupplier": "Are you sure you want to delete this supplier?",
+  "addNewProduct": "Add New Product",
+  "editProduct": "Edit Product",
+  "productName": "Product Name",
+  "price": "Price",
+  "quantity": "Quantity",
+  "description": "Description",
+  "productCreatedSuccessfully": "Product created successfully!",
+  "productUpdatedSuccessfully": "Product updated successfully!",
+  "productDeletedSuccessfully": "Product deleted successfully",
+  "deleteProduct": "Delete Product",
+  "confirmDeleteProduct": "Are you sure you want to delete this product?",
+  "addTicket": "Add Ticket",
+  "editTicket": "Edit Ticket",
+  "ticketTitle": "Ticket Title",
+  "ticketDescription": "Ticket Description",
+  "ticketStatus": "Ticket Status",
+  "ticketPriority": "Ticket Priority",
+  "ticketCreatedSuccessfully": "Ticket created successfully!",
+  "ticketUpdatedSuccessfully": "Ticket updated successfully!",
+  "ticketDeletedSuccessfully": "Ticket deleted successfully",
+  "deleteTicket": "Delete Ticket",
+  "confirmDeleteTicket": "Are you sure you want to delete this ticket?",
+  "high": "High",
+  "medium": "Medium",
+  "low": "Low",
+  "pending": "Pending",
+  "approved": "Approved",
+  "rejected": "Rejected",
+  "createdAt": "Created At",
+  "updatedAt": "Updated At",
+  "searchByName": "Search by name...",
+  "noDataAvailable": "No data available",
+  "loading": "Loading...",
+  "error": "Error",
+  "pleaseSelectFile": "Please select a file",
+  "invalidEmail": "Invalid email format",
+  "fieldRequired": "This field is required",
+  "confirmLogout": "Do you really want to logout?",
+  "logout": "Logout",
+  "yes": "Yes",
+  "no": "No",
+  "username": "Username",
+  "updatePassword": "Update your password",
+  "forYourSecurity": "For your security, please use a strong password that you do not use elsewhere.",
+  "newPassword": "New password",
+  "confirmNewPassword": "Confirm new password",
+  "updatePasswordBtn": "Update password"
 }
