--- a/flutter_application_1/lib/l10n/app_fr.arb
+++ b/flutter_application_1/lib/l10n/app_fr.arb
@@ -25,7 +25,9 @@
   "about": "À propos",
   "cancel": "Annuler",
   "confirm": "Confirmer",
-  "doYouReallyWantToLogout": "Voulez-vous vraiment vous déconnecter ?",
+  "approve": "Approuver",
+  "reject": "Rejeter",
+  "doYouReallyWantToLogout": "Voulez-vous vraiment vous déconnecter?",
   "profileUpdated": "Profil mis à jour !",
   "themeChanged": "Thème changé en {themeName}",
   "languageChanged": "Langue changée en {language}",
@@ -60,5 +62,213 @@
   "purchaseOrderDeleted": "Bon de commande {id} supprimé",
   "failedToDeletePurchaseOrder": "Échec de la suppression du bon de commande : {error}",
   "viewPurchaseOrder": "Voir le bon de commande",
-  "back": "Retour"
+  "back": "Retour",
+  "users": "Utilisateurs",
+  "password": "Mot de passe",
+  "purchaseRequest": "Demande d'achat",
+  "purchaseOrder": "Commande d'achat",
+  "rolesAccess": "Rôles et accès",
+  "settings": "Paramètres",
+  "supplier": "Fournisseur",
+  "product": "Produit",
+  "profile": "Profil",
+  "page": "Page",
+  "usersList": "Liste des utilisateurs",
+  "addNewUser": "Ajouter un nouvel utilisateur",
+  "userAdded": "Utilisateur ajouté avec succès.",
+  "searchUser": "Rechercher par nom, email ...",
+  "email": "Email",
+  "name": "Nom",
+  "status": "Statut",
+  "userPermission": "Permissions utilisateur",
+  "actions": "Actions",
+  "active": "Actif",
+  "inactive": "Inactif",
+  "unknown": "Inconnu",
+  "none": "Aucun",
+  "edit": "Modifier",
+  "view": "Afficher",
+  "loadProfileError": "Impossible de charger le profil utilisateur.",
+  "userUpdated": "Utilisateur mis à jour avec succès.",
+  "all": "Tous",
+  "filterStatus": "Filtrer par statut",
+  "filterPermission": "Filtrer par permissions",
+  "operational": "Opérationnel",
+  "full": "Complet",
+  "basic": "Basique",
+  "deleteUser": "Supprimer l'utilisateur",
+  "confirmDeleteUser": "Êtes-vous sûr de vouloir supprimer cet utilisateur?",
+  "success": "Succès",
+  "failed": "Échec",
+  "getStarted": "Commencer",
+  "dontHaveAnAccount": "Vous n'avez pas de compte ?",
+  "signUp": "S'inscrire",
+  "emailAddress": "Adresse e-mail",
+  "enterYourPassword": "Entrez votre mot de passe",
+  "forgetPassword": "Mot de passe oublié ?",
+  "loginBtn": "Connexion",
+  "forgotPassword": "Mot de passe oublié",
+  "resetYourPassword": "Réinitialiser votre mot de passe",
+  "sendResetLink": "Envoyer le lien de réinitialisation",
+  "sending": "Envoi en cours...",
+  "backToSignIn": "Retour à la connexion",
+  "dashboard": "Tableau de bord",
+  "brand": "Marque",
+  "roles": "Rôles",
+  "userProfile": "Profil utilisateur",
+  "supplierDetails": "Détails du fournisseur",
+  "productFamilies": "Familles de produits",
+  "subfamilies": "Sous-familles",
+  "addNewBrand": "Ajouter une nouvelle marque",
+  "createNewRole": "Créer un nouveau rôle",
+  "addBtn": "Ajouter",
+  "saveBtn": "Enregistrer",
+  "submitBtn": "Soumettre",
+  "copyLink": "Copier le lien",
+  "nextBtn": "Suivant",
+  "prevBtn": "Précédent",
+  "firstName": "Prénom",
+  "lastName": "Nom de famille",
+  "state": "État",
+  "zipCode": "Code postal",
+  "selectRole": "Sélectionner un rôle",
+  "selectStatus": "Sélectionner le statut",
+  "roleField": "Rôle",
+  "descriptionField": "Description",
+  "reenterPassword": "Ressaisissez votre mot de passe",
+  "currentPassword": "Mot de passe actuel",
+  "newPasswordField": "Nouveau mot de passe",
+  "confirmPasswordField": "Confirmer le mot de passe",
+  "enterValidEmail": "Veuillez entrer une adresse e-mail valide.",
+  "passwordRequired": "Le mot de passe est requis.",
+  "passwordMinLength": "Le mot de passe doit faire au moins 8 caractères.",
+  "includeUppercase": "Incluez au moins une lettre majuscule.",
+  "includeLowercase": "Incluez au moins une lettre minuscule.",
+  "includeNumber": "Incluez au moins un chiffre.",
+  "includeSpecialChar": "Incluez au moins un caractère spécial.",
+  "passwordRequirements": "Le mot de passe doit faire au moins 8 caractères, inclure des majuscules, minuscules et un chiffre.",
+  "fieldsRequired": "Ce champ est requis",
+  "emailRequired": "L'e-mail est requis",
+  "usernameRequired": "Le nom d'utilisateur est requis",
+  "allFieldsRequired": "Veuillez remplir tous les champs",
+  "branchName": "Nom de la succursale",
+  "categoryField": "Catégorie",
+  "phoneField": "Téléphone",
+  "matriculeFiscale": "Numéro fiscal",
+  "pending": "En attente",
+  "approved": "Approuvé",
+  "rejected": "Rejeté",
+  "searchProduct": "Rechercher par nom de produit...",
+  "filterByPriority": "Filtrer par priorité",
+  "filterBySubmissionDate": "Filtrer par date de soumission",
+  "filterByDueDate": "Filtrer par date d'échéance",
+  "showArchived": "Afficher les archives",
+  "hideArchived": "Masquer les archives",
+  "clearFilters": "Effacer les filtres",
+  "dashboardRefreshed": "Tableau de bord actualisé!",
+  "supplierCreatedSuccessfully": "Fournisseur créé avec succès !",
+  "supplierUpdated": "Fournisseur mis à jour",
+  "supplierDeletedSuccessfully": "Fournisseur supprimé avec succès",
+  "familyUpdatedSuccessfully": "Famille mise à jour avec succès !",
+  "familyCreatedSuccessfully": "Famille créée avec succès !",
+  "familyDeletedSuccessfully": "Famille supprimée avec succès",
+  "subfamilyCreatedSuccessfully": "Sous-famille créée avec succès !",
+  "subfamilyDeletedSuccessfully": "Sous-famille supprimée avec succès",
+  "permissionsSaved": "Permissions enregistrées",
+  "purchaseOrderCreatedSuccessfully": "Commande d'achat créée avec succès !",
+  "deleteSupplier": "Supprimer le fournisseur",
+  "deleteFamily": "Supprimer la famille",
+  "deleteSubfamily": "Supprimer la sous-famille",
+  "addNewSupplier": "Ajouter un nouveau fournisseur",
+  "addFamily": "Ajouter une famille",
+  "editFamily": "Modifier la famille",
+  "addSubfamily": "Ajouter une sous-famille",
+  "editSubfamily": "Modifier la sous-famille",
+  "home": "Accueil",
+  "createAccountToStart": "Créez votre compte pour commencer",
+  "agreeToTerms": "Je suis d'accord avec les conditions et services",
+  "copyrightInfo": "© 2025 Tableau de bord MyApp",
+  "mainPage": "Page principale",
+  "logIn": "Se connecter",
+  "welcomeToMainPage": "Bienvenue à la page principale!",
+  "userInformationForm": "Formulaire d'informations utilisateur",
+  "openFileToSelectImage": "Ouvrir un fichier pour sélectionner une image",
+  "save": "Enregistrer",
+  "passwordsDoNotMatch": "Les mots de passe ne correspondent pas",
+  "userProfile": "Profil utilisateur",
+  "firstName": "Prénom",
+  "lastName": "Nom de famille",
+  "country": "Pays",
+  "state": "État",
+  "city": "Ville",
+  "address": "Adresse",
+  "location": "Lieu",
+  "zipCode": "Code postal",
+  "updateProfile": "Mettre à jour le profil",
+  "addNewRole": "Ajouter un nouveau rôle",
+  "editRole": "Modifier le rôle",
+  "roleName": "Nom du rôle",
+  "roleDescription": "Description du rôle",
+  "roleCreatedSuccessfully": "Rôle créé avec succès !",
+  "failedToCreateRole": "Échec de la création du rôle !",
+  "deleteRole": "Supprimer le rôle",
+  "confirmDeleteRole": "Êtes-vous sûr de vouloir supprimer ce rôle?",
+  "addNewSupplier": "Ajouter un nouveau fournisseur",
+  "editSupplier": "Modifier le fournisseur",
+  "supplierName": "Nom du fournisseur",
+  "supplierEmail": "E-mail du fournisseur",
+  "phone": "Téléphone",
+  "matricule": "Matricule",
+  "cin": "CIN",
+  "supplierCreatedSuccessfully": "Fournisseur créé avec succès !",
+  "supplierUpdatedSuccessfully": "Fournisseur mis à jour avec succès !",
+  "supplierDeletedSuccessfully": "Fournisseur supprimé avec succès",
+  "deleteSupplier": "Supprimer le fournisseur",
+  "confirmDeleteSupplier": "Êtes-vous sûr de vouloir supprimer ce fournisseur?",
+  "addNewProduct": "Ajouter un nouveau produit",
+  "editProduct": "Modifier le produit",
+  "productName": "Nom du produit",
+  "price": "Prix",
+  "quantity": "Quantité",
+  "description": "Description",
+  "productCreatedSuccessfully": "Produit créé avec succès !",
+  "productUpdatedSuccessfully": "Produit mis à jour avec succès !",
+  "productDeletedSuccessfully": "Produit supprimé avec succès",
+  "deleteProduct": "Supprimer le produit",
+  "confirmDeleteProduct": "Êtes-vous sûr de vouloir supprimer ce produit?",
+  "addTicket": "Ajouter un ticket",
+  "editTicket": "Modifier le ticket",
+  "ticketTitle": "Titre du ticket",
+  "ticketDescription": "Description du ticket",
+  "ticketStatus": "Statut du ticket",
+  "ticketPriority": "Priorité du ticket",
+  "ticketCreatedSuccessfully": "Ticket créé avec succès !",
+  "ticketUpdatedSuccessfully": "Ticket mis à jour avec succès !",
+  "ticketDeletedSuccessfully": "Ticket supprimé avec succès",
+  "deleteTicket": "Supprimer le ticket",
+  "confirmDeleteTicket": "Êtes-vous sûr de vouloir supprimer ce ticket?",
+  "high": "Élevée",
+  "medium": "Moyenne",
+  "low": "Basse",
+  "pending": "En attente",
+  "approved": "Approuvé",
+  "rejected": "Rejeté",
+  "createdAt": "Créé à",
+  "updatedAt": "Mis à jour à",
+  "searchByName": "Rechercher par nom...",
+  "noDataAvailable": "Aucune donnée disponible",
+  "loading": "Chargement...",
+  "error": "Erreur",
+  "pleaseSelectFile": "Veuillez sélectionner un fichier",
+  "invalidEmail": "Format d'e-mail invalide",
+  "fieldRequired": "Ce champ est obligatoire",
+  "confirmLogout": "Voulez-vous vraiment vous déconnecter?",
+  "yes": "Oui",
+  "no": "Non",
+  "username": "Nom d'utilisateur",
+  "updatePassword": "Mettre à jour votre mot de passe",
+  "forYourSecurity": "Pour votre sécurité, veuillez utiliser un mot de passe fort que vous n'utilisez pas ailleurs.",
+  "newPassword": "Nouveau mot de passe",
+  "confirmNewPassword": "Confirmer le nouveau mot de passe",
+  "updatePasswordBtn": "Mettre à jour le mot de passe"
 }
